# minecraft-multi-pc-server

./: .gitignore  README.md  config.example.toml  pyproject.toml
minecraft_multi_pc_server/: __init__.py  archive.py  cli.py  config.py  gui.py  gui_entry.py  lock.py  machine.py  runner.py  state.py  sync.py
scripts/: build-gui-exe.ps1  install-dependencies.ps1  install_dependencies.py
tests/: test_archive.py  test_config.py  test_dependency_installer.py  test_gui.py  test_lock.py  test_machine.py  test_runner.py  test_sync.py
